--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WebMotive | Websites That Move Your Brand Forward</title>
+
+  <!-- ✅ SEO Meta Tags -->
+  <meta name="description" content="WebMotive builds clean, professional websites for small businesses, creators, and brands. Affordable pricing and fast turnaround.">
+  <meta name="keywords" content="website design, web development, web agency, small business websites, WebMotive, HTML developer, affordable websites, custom websites">
+  <meta name="author" content="WebMotive">
+  <meta property="og:title" content="WebMotive | Websites That Move Your Brand Forward">
+  <meta property="og:description" content="We create clean, professional websites for small businesses and creators.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://gorge-web.github.io/webmotive/">
+
   <style>
     body {
       margin: 0;
@@ -105,7 +115,7 @@
 
   <section class="portfolio">
     <h2>Portfolio</h2>
-    <a href="https://github.com/gorge-web/my-html-portfolio.git" target="_blank">SupClothings Website (HTML/CSS)</a>
+    <a href="https://github.com/yourusername/supclothings-html-css" target="_blank">SupClothings Website (HTML/CSS)</a>
   </section>
 
   <section class="pricing">
@@ -122,6 +132,7 @@
     <ul>
       <li>Email: <a href="mailto:webmotive.agency@gmail.com">webmotive.agency@gmail.com</a></li>
       <li>Instagram: <a href="https://instagram.com/webmotive.agency" target="_blank">@webmotive.agency</a></li>
+      <li>WhatsApp: <a href="https://wa.me/11234567890" target="_blank">Click to Message</a></li>
     </ul>
   </section>
 
