--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WebMotive | Websites That Move Your Brand Forward</title>
 
+  <!-- ✅ Google Search Console Verification -->
+  <meta name="google-site-verification" content="MKiwmJ_JVrPQYvJg7FknT2aQy8zCvAbOnjPmfmbSK90" />
+
   <!-- ✅ SEO Meta Tags -->
   <meta name="description" content="WebMotive builds clean, professional websites for small businesses, creators, and brands. Affordable pricing and fast turnaround.">
   <meta name="keywords" content="website design, web development, web agency, small business websites, WebMotive, HTML developer, affordable websites, custom websites">
